k8s/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: grafana-service
              port:
                number: 3000
        - path: /prometheus
          pathType: Prefix
          backend:
            service:
              name: prometheus-service
              port:
                number: 9090
